[gd_scene load_steps=8 format=3 uid="uid://d2r9k3m6n8p4w"]

[ext_resource type="Script" path="res://scripts/TankEnemy.gd" id="1_tank"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tank"]
radius = 0.6
height = 3.5

[sub_resource type="BoxMesh" id="BoxMesh_head_tank"]
size = Vector3(0.8, 0.8, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_body_tank"]
size = Vector3(1.2, 1.8, 0.6)

[sub_resource type="BoxMesh" id="BoxMesh_arm_tank"]
size = Vector3(0.4, 1.2, 0.4)

[sub_resource type="BoxMesh" id="BoxMesh_leg_tank"]
size = Vector3(0.5, 1.2, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tank"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
emission_enabled = true
emission = Color(0.2, 0.1, 0.1, 1)
metallic = 0.8
roughness = 0.3

[node name="TankEnemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_tank")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
shape = SubResource("CapsuleShape3D_tank")

[node name="Model" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)
mesh = SubResource("BoxMesh_head_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="Body" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_body_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="LeftArm" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.3, 0)
mesh = SubResource("BoxMesh_arm_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="RightArm" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.3, 0)
mesh = SubResource("BoxMesh_arm_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="LeftLeg" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1.5, 0)
mesh = SubResource("BoxMesh_leg_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="RightLeg" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1.5, 0)
mesh = SubResource("BoxMesh_leg_tank")
surface_material_override/0 = SubResource("StandardMaterial3D_tank")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
radius = 0.7
height = 3.5
path_height_offset = 0.5

[node name="VisionArea" type="Area3D" parent="."]

[node name="VisionShape" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AlertSound" type="AudioStreamPlayer3D" parent="."]
